--- a/source/mainwindow.ui
+++ b/source/mainwindow.ui
@@ -47,16 +47,6 @@
         </property>
        </widget>
       </item>
-      <item>
-       <widget class="QPushButton" name="qpbConfigure">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="text">
-         <string>&amp;Configure</string>
-        </property>
-       </widget>
-      </item>
      </layout>
     </item>
    </layout>
@@ -72,15 +62,27 @@
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>File</string>
+     <string>&amp;File</string>
     </property>
     <addaction name="qaExit"/>
    </widget>
+   <widget class="QMenu" name="menu_Options">
+    <property name="title">
+     <string>&amp;Options</string>
+    </property>
+    <addaction name="qaSettings"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menu_Options"/>
   </widget>
   <action name="qaExit">
    <property name="text">
     <string>&amp;Exit</string>
+   </property>
+  </action>
+  <action name="qaSettings">
+   <property name="text">
+    <string>&amp;Settings</string>
    </property>
   </action>
  </widget>
