+ start / stop casino playing according to casino game active

--- a/source/casinodialog.ui
+++ b/source/casinodialog.ui
@@ -68,6 +68,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="qpbStop">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>S&amp;top</string>
        </property>
