--- a/casinos/unibet/unibetsettingswidget.ui
+++ b/casinos/unibet/unibetsettingswidget.ui
@@ -17,15 +17,15 @@
    <item row="0" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>&amp;Bet value</string>
+      <string>&amp;Token value</string>
      </property>
      <property name="buddy">
-      <cstring>qcbBetValue</cstring>
+      <cstring>qcbTokenValue</cstring>
      </property>
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QComboBox" name="qcbBetValue"/>
+    <widget class="QComboBox" name="qcbTokenValue"/>
    </item>
   </layout>
  </widget>
