--- a/source/casinodialog.ui
+++ b/source/casinodialog.ui
@@ -45,6 +45,28 @@
     </widget>
    </item>
    <item>
+    <widget class="QGroupBox" name="qgbSettings">
+     <property name="title">
+      <string>Settings</string>
+     </property>
+     <layout class="QFormLayout" name="formLayout_2">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>&amp;System</string>
+        </property>
+        <property name="buddy">
+         <cstring>qcbSystems</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="qcbSystems"/>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <spacer name="horizontalSpacer">
