+ count manual progression * edit only progression value or sequence at once

--- a/systems/system63/system63settingswidget.ui
+++ b/systems/system63/system63settingswidget.ui
@@ -53,7 +53,11 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QSpinBox" name="qsbProgression"/>
+       <widget class="QSpinBox" name="qsbProgression">
+        <property name="minimum">
+         <number>1</number>
+        </property>
+       </widget>
       </item>
       <item row="1" column="0">
        <widget class="QRadioButton" name="qrbProgressionManual">
@@ -101,10 +105,11 @@
        </widget>
       </item>
      </layout>
-     <zorder>label</zorder>
-     <zorder></zorder>
+     <zorder>qsbProgression</zorder>
+     <zorder>qrbProgressionManual</zorder>
+     <zorder>qleProgression</zorder>
+     <zorder>qrbProgressionAuto</zorder>
      <zorder>label_4</zorder>
-     <zorder>horizontalLayoutWidget_2</zorder>
      <zorder>qcbProgressionDozenColumnNotChanged</zorder>
      <zorder>label_5</zorder>
     </widget>
