--- a/source/casinodialog.ui
+++ b/source/casinodialog.ui
@@ -113,6 +113,23 @@
       <item row="0" column="1">
        <widget class="QComboBox" name="qcbSystems"/>
       </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Play for money</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QCheckBox" name="qcbPlayForMoney">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
