--- a/source/settingsdialog.ui
+++ b/source/settingsdialog.ui
@@ -38,6 +38,16 @@
          </property>
         </widget>
        </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>Max loss to play</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QSpinBox" name="qsbMaxLossToPlay"/>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tab">
