--- a/source/casinodialog.ui
+++ b/source/casinodialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>348</height>
+    <height>373</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -96,15 +96,33 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="0">
+       </layout>
+      </item>
+      <item>
+       <layout class="QFormLayout" name="formLayout_4">
+        <item row="0" column="0">
          <widget class="QLabel" name="label_8">
           <property name="text">
            <string>Progression</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="1">
+        <item row="0" column="1">
          <widget class="QLabel" name="qlProgression">
+          <property name="text">
+           <string>0</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_9">
+          <property name="text">
+           <string>Max progression</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLabel" name="qlMaxProgression">
           <property name="text">
            <string>0</string>
           </property>
