--- a/source/casinodialog.ui
+++ b/source/casinodialog.ui
@@ -114,17 +114,31 @@
       </item>
       <item>
        <layout class="QFormLayout" name="formLayout_4">
-        <item row="0" column="1">
+        <item row="1" column="1">
          <widget class="QLabel" name="qlMaxProgression">
           <property name="text">
            <string>0</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="0">
+        <item row="1" column="0">
          <widget class="QLabel" name="label_9">
           <property name="text">
            <string>Max progression</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_10">
+          <property name="text">
+           <string>In progression</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLabel" name="qlInProgression">
+          <property name="text">
+           <string>0</string>
           </property>
          </widget>
         </item>
