--- a/source/settingsdialog.ui
+++ b/source/settingsdialog.ui
@@ -30,7 +30,7 @@
        <item row="0" column="0">
         <widget class="QLabel" name="label">
          <property name="text">
-          <string>Tokens per bet</string>
+          <string>&amp;Tokens per bet</string>
          </property>
          <property name="buddy">
           <cstring>qsbTokensPerBet</cstring>
@@ -47,7 +47,7 @@
        <item row="1" column="0">
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>Max loss to play</string>
+          <string>Max &amp;loss to play</string>
          </property>
          <property name="buddy">
           <cstring>qsbMaxLossToPlay</cstring>
@@ -60,7 +60,7 @@
        <item row="2" column="0">
         <widget class="QLabel" name="label_3">
          <property name="text">
-          <string>Stop on loss</string>
+          <string>&amp;Stop on loss</string>
          </property>
          <property name="buddy">
           <cstring>qcbStopOnLoss</cstring>
