--- a/systems/system63/system63settingswidget.ui
+++ b/systems/system63/system63settingswidget.ui
@@ -19,7 +19,10 @@
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Free spins</string>
+        <string>&amp;Free spins</string>
+       </property>
+       <property name="buddy">
+        <cstring>qsbSameDozenColumnBeforeBet</cstring>
        </property>
       </widget>
      </item>
@@ -97,7 +100,10 @@
       <item row="2" column="0">
        <widget class="QLabel" name="label_4">
         <property name="text">
-         <string>Free spins</string>
+         <string>F&amp;ree spins</string>
+        </property>
+        <property name="buddy">
+         <cstring>qsbSameDozenColumnProgression</cstring>
         </property>
        </widget>
       </item>
@@ -125,7 +131,10 @@
       <item row="3" column="1">
        <widget class="QLabel" name="label_5">
         <property name="text">
-         <string>Continue only when dozen / column not changed</string>
+         <string>&amp;Continue only when dozen / column not changed</string>
+        </property>
+        <property name="buddy">
+         <cstring>qcbProgressionDozenColumnNotChanged</cstring>
         </property>
        </widget>
       </item>
